# NCVS_tool

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  dataname2url.json  example.ipynb  make.bat
src/ncvs_tool/: __init__.py  dataLibrary.py  ncvsAnalysis.py  ncvsTool.py  ncvs_aly.py  ncvs_tool.py  personal_victimization_dictionary.json  url_store.py  visual_tool.py  visualizationTool.py
tests/: sample_size.csv  test_ncvs_tool.py
