[tool.poetry]
name = "ncvs_tool"
version = "0.1.0"
description = "Package for accessing data of National Crime Victimization Survey. "
authors = ["Siqi Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
