[tool.poetry]
name = "ncvs_tool"
version = "0.1.9"
description = "Package for accessing data of National Crime Victimization Survey. "
authors = ["Siqi Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
requests = "^2.28.1"
tabula = "^1.0.5"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
